--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,21 +28,21 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  cloud_firestore: ^4.13.6
+  cloud_firestore: ^5.0.1
   cupertino_icons: ^1.0.2
-  firebase_auth: ^4.15.3
-  firebase_core: ^2.24.2
-  firebase_storage: ^11.5.6
+  firebase_auth: ^5.1.0
+  firebase_core: ^3.1.0
+  firebase_storage: ^12.0.1
   flutter:
     sdk: flutter
   flutter_svg: ^2.0.9
   image_picker: ^1.0.5
   intl: ^0.19.0
   provider: ^6.1.1
-  uuid: ^3.0.5
+  uuid: ^4.4.0
 
 dev_dependencies:
-  flutter_lints: ^2.0.0
+  flutter_lints: ^4.0.0
   flutter_test:
     sdk: flutter
   flutter_launcher_icons: ^0.13.1
@@ -65,7 +65,9 @@ flutter:
   assets:
     - assets/iconProR.png
     - assets/namer.png
-    - assets/
+    - assets/logo.png
+    - assets/logo1.png
+    - assets/logo2.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
